// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 1`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "aantalMensen",
  "inputValue": "",
  "scenario": "Lege invoer",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 2`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "aantalMensen",
  "inputValue": null,
  "scenario": "Null waarde",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 3`] = `
{
  "error": null,
  "fieldId": "aantalMensen",
  "inputValue": 10,
  "scenario": "Geldig getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 4`] = `
{
  "error": "Waarde moet minimaal 1 zijn.",
  "fieldId": "aantalMensen",
  "inputValue": -1,
  "scenario": "Te laag getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 5`] = `
{
  "error": null,
  "fieldId": "aantalMensen",
  "inputValue": "not-a-number",
  "scenario": "Foutieve string",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 6`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "aantalVolwassen",
  "inputValue": "",
  "scenario": "Lege invoer",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 7`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "aantalVolwassen",
  "inputValue": null,
  "scenario": "Null waarde",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 8`] = `
{
  "error": null,
  "fieldId": "aantalVolwassen",
  "inputValue": 10,
  "scenario": "Geldig getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 9`] = `
{
  "error": "Waarde moet minimaal 1 zijn.",
  "fieldId": "aantalVolwassen",
  "inputValue": -1,
  "scenario": "Te laag getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 10`] = `
{
  "error": null,
  "fieldId": "aantalVolwassen",
  "inputValue": "not-a-number",
  "scenario": "Foutieve string",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 11`] = `
{
  "error": null,
  "fieldId": "kinderenLabel",
  "inputValue": "",
  "scenario": "Lege invoer",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 12`] = `
{
  "error": null,
  "fieldId": "kinderenLabel",
  "inputValue": null,
  "scenario": "Null waarde",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 13`] = `
{
  "error": null,
  "fieldId": "kinderenLabel",
  "inputValue": 10,
  "scenario": "Geldig getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 14`] = `
{
  "error": null,
  "fieldId": "kinderenLabel",
  "inputValue": -1,
  "scenario": "Te laag getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 15`] = `
{
  "error": null,
  "fieldId": "kinderenLabel",
  "inputValue": "not-a-number",
  "scenario": "Foutieve string",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 16`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "autoCount",
  "inputValue": "",
  "scenario": "Lege invoer",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 17`] = `
{
  "error": "Dit veld is verplicht.",
  "fieldId": "autoCount",
  "inputValue": null,
  "scenario": "Null waarde",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 18`] = `
{
  "error": "Waarde moet een tekst zijn.",
  "fieldId": "autoCount",
  "inputValue": 10,
  "scenario": "Geldig getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 19`] = `
{
  "error": "Waarde moet een tekst zijn.",
  "fieldId": "autoCount",
  "inputValue": -1,
  "scenario": "Te laag getal",
}
`;

exports[`BT-02 Baseline: Field Validation Integrity Snapshot: Setup Wizard Validation 20`] = `
{
  "error": "Ongeldige keuze. Toegestaan: Nee, Een, Twee.",
  "fieldId": "autoCount",
  "inputValue": "not-a-number",
  "scenario": "Foutieve string",
}
`;
